# app/Http/Requests/UpdateArticleRequest.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Requests;
 
+use App\Models\Article;
 use Illuminate\Foundation\Http\FormRequest;
 
 class UpdateArticleRequest extends FormRequest
@@ -31,13 +32,19 @@ class UpdateArticleRequest extends FormRequest
         return [
             'id' => ['required', 'exists:articles,id'],
             'title' => ['required', 'string', 'max:255'],
-            'url' => ['required', 'url', 'max:255', 'unique:articles,url'],
+            'url' => ['required', 'url', 'max:255', 'unique:articles,url,'.$this->route('id')],
             'imageUrl' => ['required', 'url', 'max:255'],
             'newsSite' => ['required', 'max:255'],
             'summary' => ['required', 'string', 'max:255'],
             'publishedAt' => ['required', 'string', 'max:255'],
             'updatedAt' => ['required', 'string', 'max:255'],
-            'featured' => ['required', 'boolean']
+            'featured' => ['required', 'boolean'],
+            'launches' => ['array'],
+            'launches.*.id' => ['required'],
+            'launches.*.provider' => ['required'],
+            'events' => ['array'],
+            'events.*.id' => ['required'],
+            'events.*.provider' => ['required']
         ];
     }
 }
