# storage/api-docs/api-docs.json
@@ -184,7 +184,7 @@
                                 "properties": {
                                     "title": {
                                         "type": "string",
-                                        "example": "Edited article post :)"
+                                        "example": "Edited article :)"
                                     },
                                     "url": {
                                         "type": "string",
@@ -209,6 +209,40 @@
                                     "updatedAt": {
                                         "type": "string",
                                         "example": "2022-05-16T22:43:44.148Z"
+                                    },
+                                    "launches": {
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "string",
+                                                    "example": "l4unc8-1d"
+                                                },
+                                                "provider": {
+                                                    "type": "string",
+                                                    "example": "Launch Provider"
+                                                }
+                                            },
+                                            "type": "object",
+                                            "format": "query"
+                                        }
+                                    },
+                                    "events": {
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "string",
+                                                    "example": "3v3nt-1d"
+                                                },
+                                                "provider": {
+                                                    "type": "string",
+                                                    "example": "Event Provider"
+                                                }
+                                            },
+                                            "type": "object",
+                                            "format": "query"
+                                        }
                                     }
                                 },
                                 "type": "object"
@@ -448,6 +482,40 @@
                                     "updatedAt": {
                                         "type": "string",
                                         "example": "2022-05-16T22:43:44.148Z"
+                                    },
+                                    "launches": {
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "string",
+                                                    "example": "l4unc8-1d"
+                                                },
+                                                "provider": {
+                                                    "type": "string",
+                                                    "example": "Launch Provider"
+                                                }
+                                            },
+                                            "type": "object",
+                                            "format": "query"
+                                        }
+                                    },
+                                    "events": {
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "string",
+                                                    "example": "3v3nt-1d"
+                                                },
+                                                "provider": {
+                                                    "type": "string",
+                                                    "example": "Event Provider"
+                                                }
+                                            },
+                                            "type": "object",
+                                            "format": "query"
+                                        }
                                     }
                                 },
                                 "type": "object"
